<resources>
    <string name="app_name">PrimaFX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Sandi</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Masuk dengan Google</string>
    <string name="error_invalid_email">Email tidak benar</string>
    <string name="error_invalid_password">Password minimal 8 karakter</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Mohon diisi</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="berhasil">Berhasil</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="timePickerText">timePicker</string>
    <string name="zeroDollar">0.00</string>
    <string name="product_name">Product Name</string>
    <string name="default_price">Rp 12.000</string>
    <string name="default_title">Judul Jualan</string>
    <string name="default_buy">Beli</string>
    <string name="simple_description">Simpel deskripsi Simpel deskripsi Simpel deskripsi Simpel deskripsi Simpel deskripsi</string>
    <string name="description">Deskripsi</string>
    <string name="full_description">Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description Full description</string>

    <string-array name="listBank">
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
        <item>Mandiri</item>
    </string-array>

    <string-array name="listRekening">
        <item>1733 405060</item>
        <item>5858 828 25</item>
        <item>2066 0100 2329 509</item>
        <item>144 0000 5858 82</item>
    </string-array>

    <string-array name="listBankAccName">
        <item>Rendra Masdrajad Safaat</item>
        <item>Ayo Sukses Abadi PT</item>
        <item>Rendra Masdrajad Safaat</item>
        <item>Ayo Sukses Abadi PT</item>
    </string-array>

    <string-array name="listCallSupport">
        <item>FX Consultant</item>
        <item>Finance</item>
        <item>Rebate</item>
        <item>Technical</item>
        <item>Marketing</item>
    </string-array>
    <string name="server_client_id">993656556887-igs4q839dm9kf5mkv3d9j9f20f3ue2n8.apps.googleusercontent.com</string>

    <string name="tab_1">Green</string>
    <string name="tab_2">Red</string>
    <string name="tab_3">Blue</string>
</resources>
